@@ -6,3 +6,4 @@ Changes:
   DirectInput (like in Allegro 5).
 - Keyboard driver for Windows was modified to use WM_KEYDOWN/UP messages
   instead of DirectInput (like in Allegro 5).
+- Added resize support for Windows, X11, and Mac OS X ports.
