@@ -12,6 +12,8 @@
  *
  *      By Angelo Mottola.
  *
+ *      Added resize support by David Capello.
+ *
  *      See readme.txt for copyright information.
  */
 
